update gradle and java versions enable java preview features